<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign Up now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="auth_failed">Authentication failed, please check your email and password.</string>
    <string name="minimum_password">Please enter minimum 6 characters!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA["<-- Back to Login Page "]]></string>
    <string name="forgot_password_msg">Don\'t worry, heppens to the best of us.</string>
    <string name="register">Register</string>
    <string name="registration">REGISTRATION</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Phone No</string>
    <string name="backToLogin">I have an account, log in now.</string>
    <string name="contact_us">Contact Us</string>
    <string name="carrier_list">Carrier List</string>
    <string name="about_us">About Us</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <string name="deliverytracking">DeliveryTracking</string>
    <string name="cancel">Cancel</string>
    <string name="Search">Search</string>
    <string name="International">International</string>
    <string name="CTT">CTT</string>
    <string name="BRT">BRT</string>
    <string name="Ekart">Ekart</string>
    <string name="IML">IML</string>
    <string name="PostaPlus">PostaPlus</string>
    <string name="SDA">SDA</string>
    <string name="Ecom">Ecom</string>
    <string name="Airpark">Airpark</string>
    <string name="Delhivery">Delhivery</string>
    <string name="GD">GD</string>
    <string name="DHL">DHL</string>
    <string name="SkyNET">SKY NET</string>
    <string name="Century">Century</string>
    <string name="CLE">CLE</string>
    <string name="JT">JT</string>
    <string name="TNT">TNT</string>
    <string name="Ninja">Ninja</string>
    <string name="GOGET">GOGET</string>
    <string name="BASS">BASS</string>
    <string name="SHOES">shoes</string>
    <string name="COSMETIC">COSMETIC</string>
    <string name="liquid_foundation">Liquid Foundation</string>
    <string name="FullCoverageConcealer">Full Coverage Concealer</string>
    <string name="rm6_90">RM6.90</string>
    <string name="rm9_90">RM9.90</string>
    <string name="matte_lipstick">Matte Lipstick</string>
    <string name="RM10_90">RM10.90</string>
    <string name="natural_cheek_blush">Natural Cheek Blush</string>

    <string name="ink_airy_velvet">Ink Airy Velvet</string>
    <string name="rm29_90">RM29.90</string>
    <string name="Cheek_Blusher">Cheek Blusher</string>
    <string name="rm10_99">RM10.99</string>
    <string name="women_sneakers">Women Sneakers</string>
    <string name="couple_shoes_sneakers">Couple Shoes Sneakers</string>
    <string name="rm36_90">RM36.90</string>
    <string name="macaron_sneakers">Macaron Sneakers</string>
    <string name="RM45_90">RM45.90</string>
    <string name="women_s_hight_heels">Women\'s Hight Heels</string>
    <string name="rm23_90">RM23.90</string>
    <string name="running_shoes">Running Shoes</string>
    <string name="rm40_90">RM40.90</string>
    <string name="rm85_00">RM85.00</string>
    <string name="simple_satchel_bags">Simple Satchel Bags</string>
    <string name="women_s_sling_bag">Women\'s Sling Bag</string>
    <string name="round_pillow_bag">Round Pillow Bag</string>
    <string name="rm5_90">RM5.90</string>
    <string name="crossbody_bag">Crossbody Bag</string>
    <string name="rm13_90">RM13.90</string>
    <string name="rm19_90">RM19.90</string>
    <string name="women_s_casual_bag">Women\'s Casual Bag</string>
    <string name="rm7_90">RM7.90</string>
    <string name="Malaysia">Malaysia</string>
    <string name="heybeautys_moist_lipstick_water_lip_tint_fashion_no_fade_glossy_moisturizing_rouge">Heybeautys moist Lipstick Water Lip Tint fashion no-fade Glossy Moisturizing rouge</string>
    <string name="rm4_90">RM4.90</string>
    <string name="Shipping">Shipping</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="comestic">Comestic</string>
    <string name="shoes">Shoes</string>
    <string name="BAGS">BAGS</string>
    <string name="bags">Bags</string>
    <string name="timberland_men_shoes">Timberland Men Shoes</string>
    <string name="send_password_reset_email">Reset Email</string>
    <string name="remove_user">Delete Account</string>
    <string name="btn_sign_out">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_send">Send</string>
    <string name="btn_change">Change</string>
    <string name="new_pass">New Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="prompt_password">Password</string>
    <string name="aname">No Limits</string>
    <string name="slogan">Buy as much as you can.</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_text">"Our mission\n"
    "No Limits employees provide packages. Develop our global"
    "business by satisfying our customers’ logistics needs and"
    "providing excellence and value in everything we do. Maintain"
    "a company in good financial condition (with extensive"
    "employee ownership)and provide our shareholders with"
    "long-term competitive returns. Inspire our employees and"
    "business partners to do their best to provide opportunities"
    "for personal development and success. Lead by example and"
    "become a responsible, caring and sustainable company that"
    "makes a difference in the communities we serve."</string>
    <string name="smart_delivery">
        "Smart E-Commerce\n\n"

        "No Limits is a revolutionary ecommerce shopping app that"
        "allows you to purchase the products and track the parcel's"
        "real time location only through apps on any mobile phone."
        "We have created a mobile application-based vehicle tracking "
        "and proof-of-delivery system that allows you to control your"
        fleet even when driving on the road."
        "Just need to use a smartphone.\n\n"

    </string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_name">Product Name</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="add_new_product">Add New Product</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="deals">Deals</string>
    <string name="quantity" />
    <string name="Quantity" />


    <string-array name="carrierlist">
        <item>CTT</item>
        <item>BRT</item>
        <item>IML</item>
        <item>PostaPlus</item>
        <item>SDA</item>
        <item>Ecom</item>
        <item>Delhivery</item>
        <item>SKYNET</item>
        <item>Century</item>
        <item>JT</item>
        <item>TNT</item>
        <item>NINJA</item>
        <item>GOGET</item>
    </string-array>

    <string-array name="sizelist">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>

    <string-array name="colorlist">
        <item>Ruby woo</item>
        <item>Chili</item>
        <item>Diva</item>
        <item>Taupe</item>
        <item>Del Rio</item>
    </string-array>

    <string-array name="shoesSize">
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
    </string-array>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_deals">Deals</string>
    <string name="title_my_account">My account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_payment">History Payment</string>
    <string name="text_product">Product</string>
    <string name="text_payment">Payment</string>
    <string name="text_favorite_product">Favorite Product</string>
    <string name="tetxt_product_page">Product Page</string>
    <string name="wish_list">Wish List</string>
    <string name="Favourite" />
    <string name="favourite">Favourite</string>
    <string name="hot_sales_product">Hot Sales Product</string>
    <string name="new_arrival">New Arrival</string>
    <string name="women_originals_superstars_shoes_rm480">Women Originals SuperStars Shoes Rm480</string>
    <string name="women_superstars_shoes">Women SuperStars Shoes</string>
    <string name="rm480">RM480</string>
    <string name="ultraboost_summer_rdy_shoes">ULTRABOOST SUMMER.RDY SHOES</string>
    <string name="rm780">Rm780</string>
    <string name="rm299">Rm299</string>
    <string name="new_europe_fashion_trend_bag_female_handbag_fashion_girls_shoulder_bag_lipstick_crossbody_bag">New Europe fashion trend bag female handbag fashion girls shoulder bag Lipstick crossbody bag</string>
    <string name="rm150">Rm150</string>
    <string name="ysl_rouge_pur_couture">YSL Rouge Pur Couture</string>
    <string name="rm199">Rm199</string>
    <string name="payment_email">Payment email</string>
    <string name="payment_name">Payment name</string>
    <string name="payment_address">Payment address</string>
    <string name="payment_phone">Payment phone</string>
    <string name="history_payment_detail">History Payment Detail</string>
    <string name="email">email</string>
    <string name="history_payemnt">Payment History</string>

    <string name="navigation_carrierlist">CarrierList</string>
    <string name="navigation_favoritelist">FavoriteList</string>
    <string name="navigation_cartlist">CartList</string>
    <string name="feedback">feedback</string>
    <string name="Feedback">Feedback</string>
    <string name="Email">Email</string>
    <string name="Chat">Chat</string>

</resources>