<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="730dp"
        android:background="@drawable/sky240x320"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:padding="10dp"
            android:text="@string/registration"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_phone"
            android:inputType="textPhonetic"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#A7FFEB"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/backToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/backToLogin"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Other Sign Up Method -->"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17dp"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>