<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/sky240x320"
    tools:context=".Shoes3"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button43"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="46dp"
        android:text="@string/buy_now"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:background="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="67dp"
        android:layout_height="57dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="402dp"
        android:layout_height="33dp"
        android:text="@string/macaron_sneakers"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView64" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="383dp"
        android:layout_height="45dp"
        android:background="@color/colorGrey"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/RM45_90"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="78dp"
        android:text="@string/Shipping"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView73" />

    <Button
        android:id="@+id/button44"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="46dp"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView64"
        android:layout_width="408dp"
        android:layout_height="263dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView71"
        app:srcCompat="@drawable/shoes3" />

</androidx.constraintlayout.widget.ConstraintLayout>