<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="730dp"
        android:background="@drawable/sky240x320"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="202dp"
            android:layout_height="157dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/profile"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="20dip" />
        <EditText
            android:id="@+id/email"
            android:layout_width="382dp"
            android:layout_height="41dp"
            android:layout_marginBottom="10dp"
            android:background="#C5CBED"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="382dp"
            android:layout_height="41dp"
            android:layout_marginBottom="10dp"
            android:background="#C5CBED"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#A7FFEB"
            android:text="@string/btn_login"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="352dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:gravity="center_horizontal"
            android:text="@string/btn_link_to_register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="17sp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>